Draw Bounding Boxes

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css">
 		<style>
 			body {
 				min-height: 75rem;
@@ -62,7 +63,9 @@
 			<div class="row">
 				<div class="col-12">
 					<h2 class="ml-3">Image</h2>
-					<img id="selected-image" class="ml-3" width="250" alt=""> 
+					<div id="imageOverlay" class="imageOverlay">
+						<img id="selectedImage" class="ml-3" width="500" alt=""> 
+					</div>
 				</div>
 			</div>
 		</main>
